--- a/view/index.html
+++ b/view/index.html
@@ -85,12 +85,12 @@
                     </header>
                 </div>
                 <div class="user-dashboard">
-                    <h1>Hello, JS</h1>
+                    <h1>Olá, USUARIO</h1>
                     <div class="row">
                         <div class="col-md-5 col-sm-5 col-xs-12 gutter">
 
                             <div class="sales">
-                                <h2>Your Sale</h2>
+                                <h2>Carteira dia</h2>
 
                                 <div class="btn-group">
                                     <button class="btn btn-secondary btn-lg dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -108,10 +108,10 @@
                         <div class="col-md-7 col-sm-7 col-xs-12 gutter">
 
                             <div class="sales report">
-                                <h2>Report</h2>
+                                <h2>Relatório mensal</h2>
                                 <div class="btn-group">
                                     <button class="btn btn-secondary btn-lg dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                        <span>Period:</span> Last Year
+                                        <span>Period:</span> Mês
                                     </button>
                                     <div class="dropdown-menu">
                                         <a href="#">2012</a>
