--- a/view/index.html
+++ b/view/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt"> 
+<html lang="pt-br"> 
     <head>
 <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
 
